# AI-security-engineer-take-home

./: .gitignore  README.md  gemini.py  main.py  pentest.py  pyproject.toml
src/: ai_pentest.py  main.py
